--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -26,39 +26,75 @@
                     <span class="fs-4">&nbsp;.mmbak Viewer Online</span>
                 </a>
 
-                <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <p class="fs-5 text-success">{$balance.balance|number_format:2:",":"."} {$currencies[$balance["currency"]]}<br />BALANCE</p>
+                <nav class="mt-2 mt-md-0 ms-md-auto">
+                    <p class="fs-5 text-success" style="margin-bottom: 0px;">{$balance.balance|number_format:2:",":"."} {$currencies[$balance["currency"]]}<br />BALANCE</p>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="$('#uploadDiv').toggle();">Upload .mmbak file</button>
                 </nav>
+
             </div>
         </header>
         
         <main>
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-
                 <div class="row">
                     <div class="col-3 text-start"><a class="link-secondary" href="index.php?start={$start_previous_month}&end={$end_previous_month}">&lt; Previous month</a></span></div>
                     <div class="col-6">
-                <form method="GET">
-                    <div class="row justify-content-center">
-                        <div class="col-4">
-                            <input class="form-control" style="height: 2em;" id="start" size="5" type="date" name="start" value="{$start}" required />
-                        </div>
-                        <div class="col-4">
-                            <input class="form-control" style="height: 2em;" id="end" size="5" type="date" name="end" value="{$end}" required />
-                        </div>
-                    </div>
-                    <div class="row justify-content-center">  
-                        <div class="col-1" style="margin-top: 1em;">
-                            <input type="submit" id="send" value="Search" class="btn btn-sm btn-outline-primary" style="display: inline;"/>
-                        </div>
-                    </div>
-                </form>
+                        <form method="GET">
+                            <div class="row justify-content-center">
+                                <div class="col-4">
+                                    <input class="form-control" style="height: 2em;" id="start" size="5" type="date" name="start" value="{$start}" required />
+                                </div>
+                                <div class="col-4">
+                                    <input class="form-control" style="height: 2em;" id="end" size="5" type="date" name="end" value="{$end}" required />
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">  
+                                <div class="col-1" style="margin-top: 1em;">
+                                    <input type="submit" id="send" value="Search" class="btn btn-sm btn-outline-secondary" style="display: inline;"/>
+                                </div>
+                            </div>
+                        </form>
                         <p class="fs-5 text-muted"></p>
                     </div>
                     <div class="col-3 text-end"><a class="link-secondary" href="index.php?start={$start_next_month}&end={$end_next_month}">Next month &gt;</a></div>
                 </div>
-
-
+            
+            <div class="row row-cols-1 row-cols-md-3 mb-3 justify-content-md-center" id="uploadDiv" style="display: none; border: 1px solid rgba(0,0,0,.125);">
+                <div class="col" style="margin-top: 1.5em;">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">FILE UPLOAD</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="input-group">
+                              <form method="POST" enctype="multipart/form-data" style="display: inherit;">
+                              <input type="file" class="form-control" name="fileupload" aria-label="Upload">
+                              <button class="btn btn-outline-secondary" type="submit">Upload</button>
+                              </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" style="margin-top: 1.5em;">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">GOOGLE DRIVE</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="input-group">
+                              <form method="POST" style="display: inherit;">
+                              <input type="text" class="form-control" name="gdriveurl" placeholder="Google Drive URL">
+                              <button class="btn btn-outline-secondary" type="submit">Download</button>
+                              </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                {if isset($fileNotFound)}
+                    <h2 class="text-danger text-center">File db.mmbak non found</h2>
+                    <h3 class="text-danger text-center">Put the file into root directory or upload via Google Drive</h3>
+                {/if}                 
             </div>              
             
             <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
@@ -95,9 +131,6 @@
             </div>
 
             <hr />  
-
-    
-
 
             <div class="table-responsive">
                 <table id="transactions" class="table table-striped table-hover" style="width:100%">
