--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -14,6 +14,31 @@
         <script src="node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
         <script src="node_modules/datatables.net-bs5/js/dataTables.bootstrap5.min.js"></script>
         <script src="assets/js/custom.js"></script>
+        {literal}    
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript">
+          google.charts.load("current", {packages:["corechart"]});
+          google.charts.setOnLoadCallback(drawChart);
+        {/literal}  
+        function drawChart() {
+          var data = google.visualization.arrayToDataTable([
+            ['Expenditure', 'Amount'],  
+            {foreach from=$expendituresGrouped item=amount key=group}
+            ['{$group}', {$amount}],
+            {/foreach}
+          ]);
+         {literal}
+          var options = {
+            //title: 'Expenditures',
+            is3D: true,
+            legend: 'none'
+          };
+
+          var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
+          chart.draw(data, options);
+        }
+        </script>
+        {/literal}
     </head>
     <body>
     <div class="container py-3">
@@ -162,10 +187,27 @@
                     </tfoot>
                 </table>
             </div>
+
+            <div class="container">
+              <center><h2 style="margin-top: 2em;">Expenditures grouped by category</h2></center>
+              <div class="row">
+                <div class="col-8">
+                    <div id="piechart_3d" style="height: 600px"></div>
+                </div>
+                <div class="col-4">
+                    <br /><br /><br /><br />
+                    <table class="table">
+                      <tbody>
+                        {foreach from=$expendituresGrouped item=amount key=group}
+                        <tr><td>{$group}</td><td>{$amount|number_format:2:",":"."} €</td></tr>
+                        {/foreach}
+                      </tbody>
+                    </table> 
+                </div>
+              </div>
+            </div>
+            
         </main>
-
-
-
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
